RESOLVED FIXED92745
[EFL] [GTK] Register Protocol Handler Client is never deleted
https://bugs.webkit.org/show_bug.cgi?id=92745
Summary [EFL] [GTK] Register Protocol Handler Client is never deleted
Mikhail Pozdnyakov
Reported 2012-07-31 06:01:31 PDT
Register Protocol Handler Client is never deleted on EFL and GTK ports.
Attachments
patch (9.03 KB, patch)
2012-07-31 06:24 PDT, Mikhail Pozdnyakov
gustavo: review+
to be landed (8.30 KB, patch)
2012-08-05 23:55 PDT, Mikhail Pozdnyakov
no flags
to be landed (8.31 KB, patch)
2012-08-06 00:08 PDT, Mikhail Pozdnyakov
no flags
Mikhail Pozdnyakov
Comment 1 2012-07-31 06:24:26 PDT
Kenneth Rohde Christiansen
Comment 2 2012-08-02 09:52:19 PDT
Comment on attachment 155515 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=155515&action=review Why are you doing EFL and GTK at the same time? Better get a GTK guy to have a quick look as well > Source/WebKit/efl/WebCoreSupport/RegisterProtocolHandlerClientEfl.h:57 > + > + explicit RegisterProtocolHandlerClientEfl(Evas_Object* view); > }; As it is private maybe the explicit doesnt really matter > Source/WebKit/efl/ewk/ewk_view.cpp:259 > #if ENABLE(INPUT_TYPE_COLOR) > WebCore::ColorChooserClient* colorChooserClient; > #endif > +#if ENABLE(REGISTER_PROTOCOL_HANDLER) || ENABLE(CUSTOM_SCHEME_HANDLER) > + OwnPtr<WebCore::RegisterProtocolHandlerClientEfl> registerProtocolHandlerClient; > +#endif I really wonder how much it makes sense to make the EFL port support not having these things always enabled. Basically it should be guarded if you don't want to officially turn it on yet, but if not it doesnt make much sense
Mikhail Pozdnyakov
Comment 3 2012-08-03 00:17:33 PDT
Comment on attachment 155515 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=155515&action=review >> Source/WebKit/efl/WebCoreSupport/RegisterProtocolHandlerClientEfl.h:57 >> }; > > As it is private maybe the explicit doesnt really matter Agree, do not need explicit here. >> Source/WebKit/efl/ewk/ewk_view.cpp:259 >> +#endif > > I really wonder how much it makes sense to make the EFL port support not having these things always enabled. Basically it should be guarded if you don't want to officially turn it on yet, but if not it doesnt make much sense I am quite OK with removing guards, but at the moment there are everywhere including WebCore RegisterProtocolHanler - related stuff. And removing those is for sure is out of this bug scope.
Mikhail Pozdnyakov
Comment 4 2012-08-03 00:21:26 PDT
(In reply to comment #2) > (From update of attachment 155515 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=155515&action=review > > Why are you doing EFL and GTK at the same time? The fixes for both ports are completely identical, and the code being fixed was also introduced with one commit cd6b2961205c1278ffd06ef1617dc09d2c599240.
Gustavo Noronha (kov)
Comment 5 2012-08-03 08:08:21 PDT
Comment on attachment 155515 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=155515&action=review >>> Source/WebKit/efl/WebCoreSupport/RegisterProtocolHandlerClientEfl.h:57 >>> }; >> >> As it is private maybe the explicit doesnt really matter > > Agree, do not need explicit here. I won't set cq+ because of these comments.
Raphael Kubo da Costa (:rakuco)
Comment 6 2012-08-03 16:04:50 PDT
Comment on attachment 155515 [details] patch Nitpicking a little, I wonder if it really makes sense to add Intel's copyright to all those files; not that many lines have been touched after all.
Mikhail Pozdnyakov
Comment 7 2012-08-05 23:55:11 PDT
Created attachment 156608 [details] to be landed Considered feedback from Kenneth and Raphael.
Mikhail Pozdnyakov
Comment 8 2012-08-06 00:02:14 PDT
Comment on attachment 156608 [details] to be landed Did not include reviewer name into changelog.
Mikhail Pozdnyakov
Comment 9 2012-08-06 00:08:17 PDT
Created attachment 156611 [details] to be landed Added reviewer to the ChangeLog.
WebKit Review Bot
Comment 10 2012-08-06 01:02:33 PDT
Comment on attachment 156611 [details] to be landed Clearing flags on attachment: 156611 Committed r124742: <http://trac.webkit.org/changeset/124742>
WebKit Review Bot
Comment 11 2012-08-06 01:02:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.