[EFL] [GTK] Register Protocol Handler Client is never deleted https://bugs.webkit.org/show_bug.cgi?id=92745

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-08-06
Reviewed by Gustavo Noronha Silva.

Added usage of OwnPtr to manage register protocol handler client pointer.

Source/WebKit/efl:

* WebCoreSupport/RegisterProtocolHandlerClientEfl.cpp:
(WebCore::RegisterProtocolHandlerClientEfl::create): Factory function returning smart pointer.
(WebCore):
* WebCoreSupport/RegisterProtocolHandlerClientEfl.h:
(RegisterProtocolHandlerClientEfl):
* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(_ewk_view_priv_new):

Source/WebKit/gtk:

* WebCoreSupport/RegisterProtocolHandlerClientGtk.cpp:
(WebKit::RegisterProtocolHandlerClient::create): Factory function returning smart pointer.
(WebKit):
* WebCoreSupport/RegisterProtocolHandlerClientGtk.h:
(RegisterProtocolHandlerClient):
* webkit/webkitwebview.cpp:
(webkit_web_view_init):
* webkit/webkitwebviewprivate.h:

Canonical link: https://commits.webkit.org/111081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124742 268f45cc-cd09-0410-ab3c-d52691b4dbfc