Source/WebKit/gtk/webkit/webkitwebviewprivate.h
@@ -39,6 +39,10 @@
 #include "UserMediaClientGtk.h"
 #endif
 
+#if ENABLE(REGISTER_PROTOCOL_HANDLER)
+#include "RegisterProtocolHandlerClientGtk.h"
+#endif
+
 namespace WebKit {
 WebCore::Page* core(WebKitWebView*);
 WebKitWebView* kit(WebCore::Page*);
@@ -116,6 +120,10 @@ struct _WebKitWebViewPrivate {
 
 #if ENABLE(GEOLOCATION)
     OwnPtr<WebCore::GeolocationClientMock> geolocationClientMock;
+#endif
+
+#if ENABLE(REGISTER_PROTOCOL_HANDLER)
+    OwnPtr<WebKit::RegisterProtocolHandlerClient> registerProtocolHandlerClient;
 #endif
 };
 
